--- a/app/src/main/res/drawable/clickable_a_white__defualt.xml
+++ b/app/src/main/res/drawable/clickable_a_white__defualt.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@color/colorBlack_DividerLine" android:state_pressed="true"></item>
-    <item android:drawable="@color/colorBlack_DividerLine" android:state_checked="true"></item>
-    <item android:drawable="@color/colorBlack_DividerLine" android:state_selected="true"></item>
+    <item android:drawable="@color/colorBlack_Line" android:state_pressed="true"></item>
+    <item android:drawable="@color/colorBlack_Line" android:state_checked="true"></item>
+    <item android:drawable="@color/colorBlack_Line" android:state_selected="true"></item>
     <item android:drawable="@color/colorWhite"></item>
 </selector>
