--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <com.lfp.widget.springview.SpringView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         app:enable_springback="true">
 
         <android.support.v7.widget.RecyclerView
@@ -15,4 +17,5 @@
             android:layout_height="match_parent" />
 
     </com.lfp.widget.springview.SpringView>
+
 </LinearLayout>
