--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/layout_Root"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <com.lfp.widget.springview.SpringView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         app:enable_springback="true">
 
         <android.support.v7.widget.RecyclerView
@@ -18,4 +18,10 @@
 
     </com.lfp.widget.springview.SpringView>
 
-</LinearLayout>
+    <com.lfp.androidrapiddevelopmentframework.widget.WaitProgressBar
+        android:id="@+id/view_WaitProgressBar"
+        android:layout_width="120dp"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:layout_height="120dp" />
+</RelativeLayout>
