--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="TransparentStateBar" parent="AppTheme.Base">
+    <style name="TransparentStateBar" parent="AppTheme">
         <!--透明状态栏-->
         <item name="android:windowTranslucentStatus">true</item>
         <!--透明导航栏-->
