--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
     android:id="@+id/layout_Root"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
@@ -21,7 +21,16 @@
     <com.lfp.androidrapiddevelopmentframework.widget.WaitProgressBar
         android:id="@+id/view_WaitProgressBar"
         android:layout_width="60dp"
-        android:visibility="gone"
+        android:layout_height="60dp"
         android:layout_centerInParent="true"
-        android:layout_height="60dp" />
+        android:visibility="gone" />
+
+    <TextView
+        android:id="@+id/view_Info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:padding="@dimen/Unified_Margin_LeftAndRight"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/TextSize_Content" />
 </RelativeLayout>
