--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/layout_actionbar" />
+
     <com.lfp.widget.springview.SpringView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
