--- a/app/src/main/res/layout/demo_recycleradapter.xml
+++ b/app/src/main/res/layout/demo_recycleradapter.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/view_Toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary" />
+
 
     <TextView
         android:id="@+id/view_Info"
