--- a/app/src/main/res/layout/layout_actionbar.xml
+++ b/app/src/main/res/layout/layout_actionbar.xml
@@ -6,11 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/ActionBar_Height"
     android:background="@color/colorPrimary"
-    android:fitsSystemWindows="true"
     android:focusable="true"
-    android:focusableInTouchMode="true">
+    android:focusableInTouchMode="true"
+    android:visibility="gone"
+    tools:visibility="visible">
 
-    <LinearLayout
+    <android.support.constraint.ConstraintLayout
         android:id="@+id/layout_LeftControl"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -43,39 +44,53 @@
             android:textSize="@dimen/TextSize_Content"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/view_Back"
+            app:layout_goneMarginLeft="@dimen/Unified_Margin_LeftAndRight"
             tools:visibility="visible" />
-    </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/view_Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/clickable__t__s_grey"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/TextSize_Title"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/view_SubTitle"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="@dimen/Unified_Margin_LeftAndRight"
         app:layout_constraintLeft_toRightOf="@+id/layout_LeftControl"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_goneMarginLeft="@dimen/Unified_Margin_LeftAndRight"
-        tools:text="Title"
-        tools:visibility="visible" />
+        app:layout_constraintRight_toRightOf="parent">
 
-    <TextView
-        android:id="@+id/view_SubTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/clickable__t__s_grey"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/TextSize_Subtitle"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/layout_LeftControl"
-        app:layout_constraintTop_toBottomOf="@+id/view_Title"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:layout_goneMarginLeft="@dimen/Unified_Margin_LeftAndRight"
-        tools:text="SubTitle"
-        tools:visibility="visible" />
+        <TextView
+            android:id="@+id/view_Title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/clickable__t__s_grey"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/TextSize_Title"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/view_SubTitle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Title"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/view_SubTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/clickable__t__s_grey"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:textColor="@color/colorWhite"
+            android:textSize="@dimen/TextSize_Subtitle"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_Title"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="SubTitle"
+            tools:visibility="visible" />
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
