--- a/ardf/src/main/res/values/styles.xml
+++ b/ardf/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!-- 无边框 Dialog-->
-    <style name="BaseDialogStyle" parent="android:Theme.Holo.Dialog">
+    <style name="ARDF_BaseDialogStyle" parent="android:Theme.Holo.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowNoTitle">true</item>
