--- a/app/src/main/res/layout/aa_activity_test.xml
+++ b/app/src/main/res/layout/aa_activity_test.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_Root"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -7,5 +9,16 @@
         android:id="@+id/view_BannerView"
         android:layout_width="match_parent"
         android:layout_height="140dp" />
+
+
+    <Button
+        android:id="@+id/view_Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="测试按钮"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
