--- a/app/src/main/res/layout/aa_activity_test.xml
+++ b/app/src/main/res/layout/aa_activity_test.xml
@@ -10,6 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="140dp" />
 
+    <TextView
+        android:id="@+id/view_TestTop"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorAccent"
+        android:gravity="center"
+        android:text="测试Info测试Info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/view_Button"
