--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -5,8 +5,14 @@
     android:viewportHeight="108"
     android:viewportWidth="108">
     <path
-        android:fillColor="#26A69A"
-        android:pathData="M0,0h108v108h-108z" />
+        android:fillColor="#ff66CC66"
+        android:pathData="M0,0h108v108z" />
+    <path
+        android:fillColor="#ff00BCD4"
+        android:pathData="M0,0v108h108z" />
+    <path
+        android:fillColor="#ffFF4081"
+        android:pathData="M0,108h108v-108z" />
     <path
         android:fillColor="#00000000"
         android:pathData="M9,0L9,108"
