--- a/app/src/main/res/layout/aa_activity_test.xml
+++ b/app/src/main/res/layout/aa_activity_test.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_Root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <com.lfp.androidrapiddevelopmentframework.BannerView
         android:id="@+id/view_BannerView"
@@ -21,14 +23,65 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/view_Button"
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="测试按钮"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/view_Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试按钮" />
+
+        <Button
+            android:id="@+id/view_Button2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="测试按钮2" />
+    </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/view_Info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/Unified_Margin_LeftAndRight"
+        android:padding="@dimen/Unified_Margin_LeftAndRight"
+        android:text="测试信息:"
+        android:textColor="@color/colorBlack_Explain"
+        android:textSize="@dimen/TextSize_Content"
+        app:layout_constraintBottom_toTopOf="@id/view_TestBottom" />
+
+    <FrameLayout
+        android:id="@+id/view_TestBottom"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:text="测试Button" />
+
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/shape__c5__s_red"
+            android:gravity="center"
+            android:hint="测试输入"
+            android:padding="@dimen/Unified_Margin_Basic"
+            android:textColor="@color/colorWhite"
+            android:textColorHint="@color/colorWhite"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_Button" />
+    </FrameLayout>
 </android.support.constraint.ConstraintLayout>
