--- a/app/src/main/res/layout/demo_game.xml
+++ b/app/src/main/res/layout/demo_game.xml
@@ -8,7 +8,7 @@
         android:id="@+id/layout_ActionBar"
         layout="@layout/layout_actionbar" />
 
-    <com.lfp.androidrapiddevelopmentframework.demo.visualeffect.widget.ClickGameView
+    <com.lfp.androidrapiddevelopmentframework.demo.visualeffect.widget.AircraftGameView
         android:id="@+id/view_ClickGameView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
